--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <a @click="cambiarDiv('portada')">
           <img class="landing-logo" src="img/presidis.png" alt="">
         </a>
-        <button class="button-footer">
+        <!-- <button class="button-footer">
           <svg width="50px" height="50px" stroke="currentColor" viewBox="0 0 24 24" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <circle cx="12" cy="6" r="4" stroke-width="1" />
@@ -65,7 +65,7 @@
               d="M19.9975 18C20 17.8358 20 17.669 20 17.5C20 15.0147 16.4183 13 12 13C7.58172 13 4 15.0147 4 17.5C4 19.9853 4 22 12 22C14.231 22 15.8398 21.8433 17 21.5634"
               stroke-width="1" stroke-linecap="round" />
           </svg>
-        </button>
+        </button> -->
       </div>
     </header>
 
@@ -76,7 +76,9 @@
           <div class="entire-content">
             <div class="content-carrousel">
               <figure v-for="(actual, index) in portada.productosRandom" class="shadow" :key="index">
-                <img :src="'./laravel/public/' + actual.image" />
+                <button @click="botonProducte(actual.id)">
+                  <img :src="'./laravel/public/' + actual.image" />
+                </button>
               </figure>
             </div>
           </div>
@@ -306,6 +308,7 @@
       </div>
     </div>
 
+    <!-- LOADER -->
     <div class="load" v-if="mostrar('loader-ticket')">
       <img src="img/giphy.gif" alt="">
       <p>Carregant...</p>
