--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <img class="landing-logo" src="img/presidis.png" alt="">
         </a>
         <button v-if="!usuario.usuarioRegistrado" @click="activareModalLogin()" class="button-footer">
-          <svg width="50px" height="50px" stroke="currentColor" viewBox="0 0 24 24" fill="none"
+          <svg width="50px" height="50px" stroke="currentColor" style="padding: 3px;" viewBox="0 0 24 24" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <circle cx="12" cy="6" r="4" stroke-width="1" />
             <path
@@ -68,12 +68,13 @@
           </svg>
         </button>
         <button v-else @click="goToProfile()" class="button-footer">
-          <svg width="50px" height="50px" stroke="currentColor" viewBox="0 0 24 24" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <circle cx="12" cy="6" r="4" stroke-width="1" />
-            <path
-              d="M19.9975 18C20 17.8358 20 17.669 20 17.5C20 15.0147 16.4183 13 12 13C7.58172 13 4 15.0147 4 17.5C4 19.9853 4 22 12 22C14.231 22 15.8398 21.8433 17 21.5634"
-              stroke-width="1" stroke-linecap="round" />
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user-check" width="50px"
+            height="50px" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+            stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+            <path d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"></path>
+            <path d="M6 21v-2a4 4 0 0 1 4 -4h4"></path>
+            <path d="M15 19l2 2l4 -4"></path>
           </svg>
         </button>
         <div v-if="!usuario.usuarioRegistrado" :class="['modal',{'is-active': navegacion.activeModalProfileLogin}]">
@@ -206,9 +207,40 @@
     </header>
 
     <!-- PROFILE -->
-    <div v-if="mostrar('profile')">
-      <h1>hola</h1>
+    <div v-if="mostrar('profile')" class="profile-container">
+      <div class="svg-profile-container">
+        <svg xmlns="http://www.w3.org/2000/svg" class="svg-profile-edit" width="200" height="200" viewBox="0 0 24 24"
+          stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+          <path d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"></path>
+          <path d="M6 21v-2a4 4 0 0 1 4 -4h3.5"></path>
+          <path d="M18.42 15.61a2.1 2.1 0 0 1 2.97 2.97l-3.39 3.42h-3v-3l3.42 -3.39z"></path>
+        </svg>
+      </div>
+      <div class="info-profile-container">
+        <div class="user-info">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2"
+            style="left: 30%;" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+            <path d="M11 19h-6a2 2 0 0 1 -2 -2v-10a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v6"></path>
+            <path d="M3 7l9 6l9 -6"></path>
+            <path d="M15 19l2 2l4 -4"></path>
+          </svg>
+
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user-circle" width="24"
+            height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+            stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+            <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
+            <path d="M12 10m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0"></path>
+            <path d="M6.168 18.849a4 4 0 0 1 3.832 -2.849h4a4 4 0 0 1 3.834 2.855"></path>
+          </svg>
+          <h3>{{ usuario.name }}</h3>
+          <p>{{ usuario.userEmail }}</p>
+        </div>
+      </div>
     </div>
+
     <!-- PORTADA -->
     <div class="landing-page" v-if="mostrar('portada')">
       <div class="landing-container">
