fixing index button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <input v-model="navegacion.inputValue" type="text" class="search-input" placeholder="Cerca...">
           </div>
           <div class="profile-buttons-header">
-            <button v-if="!usuario.usuarioRegistrado" @click="activareModalLogin()" class="button-footer">
+            <button v-if="!usuario.usuarioRegistrado" @click="activaModalLogin(1)" class="button-footer">
               <svg width="50px" height="50px" stroke="currentColor" style="padding: 3px;" viewBox="0 0 24 24"
                 fill="none" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="12" cy="6" r="4" stroke-width="1" />
