--- a/index.html
+++ b/index.html
@@ -226,35 +226,118 @@
 
     <!-- PROFILE -->
     <div v-if="mostrar('profile')" class="profile-container">
-      <div class="svg-profile-container">
-        <svg xmlns="http://www.w3.org/2000/svg" class="svg-profile-edit" width="200" height="200" viewBox="0 0 24 24"
-          stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-          <path d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"></path>
-          <path d="M6 21v-2a4 4 0 0 1 4 -4h3.5"></path>
-          <path d="M18.42 15.61a2.1 2.1 0 0 1 2.97 2.97l-3.39 3.42h-3v-3l3.42 -3.39z"></path>
-        </svg>
-      </div>
+      <svg stroke="currentColor" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <circle cx="12" cy="9" r="3" stroke-width="1" />
+        <path d="M17.9691 20C17.81 17.1085 16.9247 15 11.9999 15C7.07521 15 6.18991 17.1085 6.03076 20" stroke-width="1"
+          stroke-linecap="round" />
+        <path
+          d="M7 3.33782C8.47087 2.48697 10.1786 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 10.1786 2.48697 8.47087 3.33782 7"
+          stroke-width="1" stroke-linecap="round" />
+      </svg>
       <div class="info-profile-container">
-        <div class="user-info">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2"
-            style="left: 30%;" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-            <path d="M11 19h-6a2 2 0 0 1 -2 -2v-10a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v6"></path>
-            <path d="M3 7l9 6l9 -6"></path>
-            <path d="M15 19l2 2l4 -4"></path>
+        <div class="info-user user-name">
+          <svg stroke="currentColor" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="9" cy="9" r="2" stroke-width="1" />
+            <path
+              d="M13 15C13 16.1046 13 17 9 17C5 17 5 16.1046 5 15C5 13.8954 6.79086 13 9 13C11.2091 13 13 13.8954 13 15Z"
+              stroke-width="1" />
+            <path
+              d="M22 12C22 15.7712 22 17.6569 20.8284 18.8284C19.6569 20 17.7712 20 14 20H10C6.22876 20 4.34315 20 3.17157 18.8284C2 17.6569 2 15.7712 2 12C2 8.22876 2 6.34315 3.17157 5.17157C4.34315 4 6.22876 4 10 4H14C17.7712 4 19.6569 4 20.8284 5.17157C21.298 5.64118 21.5794 6.2255 21.748 7"
+              stroke-width="1" stroke-linecap="round" />
+            <path d="M19 12H15" stroke-width="1" stroke-linecap="round" />
+            <path d="M19 9H14" stroke-width="1" stroke-linecap="round" />
+            <path d="M19 15H16" stroke-width="1" stroke-linecap="round" />
           </svg>
+          <h3>{{ usuario.userName }}</h3>
+        </div>
+        <div class="info-user user-email">
+          <svg stroke="currentColor" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M22 12C22 15.7712 22 17.6569 20.8284 18.8284C19.6569 20 17.7712 20 14 20H10C6.22876 20 4.34315 20 3.17157 18.8284C2 17.6569 2 15.7712 2 12C2 8.22876 2 6.34315 3.17157 5.17157C4.34315 4 6.22876 4 10 4H14C17.7712 4 19.6569 4 20.8284 5.17157C21.4816 5.82475 21.7706 6.69989 21.8985 8"
+              stroke-width="1" stroke-linecap="round" />
+            <path
+              d="M18 8L15.8411 9.79908C14.0045 11.3296 13.0861 12.0949 12 12.0949C11.3507 12.0949 10.7614 11.8214 10 11.2744M6 8L6.9 8.75L7.8 9.5"
+              stroke-width="1" stroke-linecap="round" />
 
-          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user-circle" width="24"
-            height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
-            stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-            <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
-            <path d="M12 10m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0"></path>
-            <path d="M6.168 18.849a4 4 0 0 1 3.832 -2.849h4a4 4 0 0 1 3.834 2.855"></path>
           </svg>
-          <h3>{{ usuario.name }}</h3>
           <p>{{ usuario.userEmail }}</p>
+        </div>
+        <button class="button is-danger" @click="logout()">LogOut</button>
+      </div>
+      <div class="lista-tickets">
+        <h1>Els meus tickets</h1>
+        <hr>
+        <div v-for="(actual,index) in usuario.myTickets" class="myTicket">
+          <div class="info-logo">
+            <div v-if="actual.estat==='Pendent de preparar'">
+              <svg stroke="#ff0800" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M19 19L17.5 17.5" stroke-width="1" stroke-linecap="round" />
+                <path d="M19 5L17.5 6.5" stroke-width="1" stroke-linecap="round" />
+                <path d="M5 19L6.5 17.5" stroke-width="1" stroke-linecap="round" />
+                <path d="M5 5L6.5 6.5" stroke-width="1" stroke-linecap="round" />
+                <path d="M2 12H4" stroke-width="1" stroke-linecap="round" />
+                <path d="M19.9998 12L21.9998 12" stroke-width="1" stroke-linecap="round" />
+                <path d="M12 4.00021L12 2.00021" stroke-width="1" stroke-linecap="round" />
+                <path
+                  d="M13.7781 14.364C14.9497 13.1924 14.9497 11.2929 13.7781 10.1214C12.6065 8.94978 10.707 8.94978 9.53545 10.1214C9.0898 10.567 8.77857 11.4921 8.56396 12.4675C8.24305 13.926 8.08259 14.6553 8.66339 15.2361C9.24419 15.8169 9.97346 15.6564 11.432 15.3355C12.4073 15.1209 13.3324 14.8096 13.7781 14.364Z"
+                  stroke-width="1" />
+                <path
+                  d="M9 21.5422C4.94289 20.2679 2 16.4776 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 16.4776 19.0571 20.2679 15 21.5422"
+                  stroke-width="1" stroke-linecap="round" />
+
+              </svg>
+            </div>
+            <div v-else-if="actual.estat==='En preparació'">
+              <svg stroke="#ffae00" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M9 21.5422C4.94289 20.2679 2 16.4776 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 16.4776 19.0571 20.2679 15 21.5422"
+                  stroke-width="1" stroke-linecap="round" />
+                <path d="M19 19L17.5 17.5" stroke-width="1" stroke-linecap="round" />
+                <path d="M19 5L17.5 6.5" stroke-width="1" stroke-linecap="round" />
+                <path d="M5 19L6.5 17.5" stroke-width="1" stroke-linecap="round" />
+                <path d="M5 5L6.5 6.5" stroke-width="1" stroke-linecap="round" />
+                <path d="M2 12H4" stroke-width="1" stroke-linecap="round" />
+                <path d="M19.9998 12L21.9998 12" stroke-width="1" stroke-linecap="round" />
+                <path d="M12 4.00021L12 2.00021" stroke-width="1" stroke-linecap="round" />
+                <path
+                  d="M15 11.9999C15 13.6567 13.6569 14.9999 12 14.9999C10.3431 14.9999 9 13.6567 9 11.9999C9 11.3696 9.43408 10.4954 9.972 9.65399C10.7764 8.39573 11.1786 7.7666 12 7.7666C12.8214 7.7666 13.2236 8.39573 14.028 9.65399C14.5659 10.4954 15 11.3696 15 11.9999Z"
+                  stroke-width="1" />
+              </svg>
+            </div>
+            <div v-else-if="actual.estat==='Preparat per recollir'">
+              <svg stroke="#00ff6a" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M19 19L17.5 17.5" stroke-width="1" stroke-linecap="round" />
+                <path d="M19 5L17.5 6.5" stroke-width="1" stroke-linecap="round" />
+                <path d="M5 19L6.5 17.5" stroke-width="1" stroke-linecap="round" />
+                <path d="M5 5L6.5 6.5" stroke-width="1" stroke-linecap="round" />
+                <path d="M2 12H4" stroke-width="1" stroke-linecap="round" />
+                <path d="M19.9998 12L21.9998 12" stroke-width="1" stroke-linecap="round" />
+                <path d="M12 4.00021L12 2.00021" stroke-width="1" stroke-linecap="round" />
+                <path
+                  d="M10.1214 14.364C8.94978 13.1924 8.94978 11.2929 10.1214 10.1214C11.2929 8.94978 13.1924 8.94978 14.364 10.1214C14.8096 10.567 15.1209 11.4921 15.3355 12.4675C15.6564 13.926 15.8169 14.6553 15.2361 15.2361C14.6553 15.8169 13.926 15.6564 12.4675 15.3355C11.4921 15.1209 10.567 14.8096 10.1214 14.364Z"
+                  stroke-width="1" />
+                <path
+                  d="M9 21.5422C4.94289 20.2679 2 16.4776 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 16.4776 19.0571 20.2679 15 21.5422"
+                  stroke-width="1" stroke-linecap="round" />
+              </svg>
+            </div>
+            <div v-else-if="actual.estat==='Recollit'">
+              <svg stroke="#00ff6a" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M9 14H3" stroke-width="1" stroke-linecap="round" />
+                <path d="M8 18H3" stroke-width="1" stroke-linecap="round" />
+                <path d="M17 16.5V12.5V8" stroke-width="1" stroke-linecap="round" />
+                <circle cx="14.5" cy="16.5" r="2.5" stroke-width="1" />
+                <path d="M21 12C18.7909 12 17 10.2091 17 8" stroke-width="1" stroke-linecap="round" />
+                <path d="M3 6H10.4118M15 6H13.4118" stroke-width="1" stroke-linecap="round" />
+                <path d="M13 10L6.82353 10M3 10H4.32353" stroke-width="1" stroke-linecap="round" />
+              </svg>
+            </div>
+          </div>
+          <div class="info-data">
+            <p><b>ID:</b> {{actual.id}}</p>
+            <p><b>PREU:</b> {{actual.final_price}}</p>
+            <p><b>ESTAT:</b> {{actual.estat}}</p>
+          </div>
         </div>
       </div>
     </div>
