--- a/index.html
+++ b/index.html
@@ -551,13 +551,13 @@
             <div class="confirm_payment">
               <label for="user_name">Nom complet</label>
               <input id="user_name" class="input" v-model="usuario.userName" type="text"
-                placeholder="Escriu el teu nom complet..." />
+                placeholder="Escriu el teu nom complet..." required :disabled="usuario.usuarioRegistrado" />
 
               <div class="field">
                 <label for="user_email">Email</label>
                 <div class="control">
                   <input id="user_email" class="input" v-model="usuario.userEmail" type="email"
-                    placeholder="exemple@exemple.cat" required />
+                    placeholder="exemple@exemple.cat" required :disabled="usuario.usuarioRegistrado" />
                   <span class="icon is-small is-left">
                     <i class="fas fa-envelope"></i>
                   </span>
