--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <input v-model="navegacion.inputValue" type="text" class="search-input" placeholder="Cerca...">
           </div>
           <div class="profile-buttons-header">
-            <button v-if="!usuario.usuarioRegistrado" @click="activaModalLogin(1)" class="button-footer">
+            <button v-if="!usuario.usuarioRegistrado" @click="activaModalLogin(3)" class="button-footer">
               <svg width="50px" height="50px" stroke="currentColor" style="padding: 3px;" viewBox="0 0 24 24"
                 fill="none" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="12" cy="6" r="4" stroke-width="1" />
@@ -81,7 +81,7 @@
         <a @click="cambiarDiv('portada')">
           <img class="landing-logo" src="img/presidis.png" alt="">
         </a>
-        <button v-if="!usuario.usuarioRegistrado" @click="activaModalLogin(1)" class="button-footer">
+        <button v-if="!usuario.usuarioRegistrado" @click="activaModalLogin(3)" class="button-footer">
           <svg width="50px" height="50px" stroke="currentColor" style="padding: 3px;" viewBox="0 0 24 24" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <circle cx="12" cy="6" r="4" stroke-width="1" />
@@ -103,6 +103,13 @@
         </button>
       </div>
     </header>
+
+    <div :class="['profile-dropdown',{'p-drop-shown':this.navegacion.loginDropdown}]">
+      <div>
+        <button class="button is-primary">Login</button>
+        <button class="button is-link">Registra't</button>
+      </div>
+    </div>
 
     <!-- LOGIN/REGISTER MODAL -->
     <div class="log-reg-modals">
